# AnimatedWebPDrawable

./: .gitattributes  .gitmodules  LICENSE.txt  README.md
app/: build.gradle
app/src/androidTest/java/com/example/webp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  webpJNI.c
app/src/main/java/com/example/webp/: AnimatedWebpDrawable.java  MainActivity.java
app/src/main/res/drawable-land/: background.xml
app/src/main/res/drawable-port/: background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/example/webp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
